clang/test/BSC/Negative/Trait/trait_qualifiers_this_param/trait_qualifiers_this_param.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

_Trait F {
  int foo(const This* this);
  int goo(_Owned This* this); // expected-error {{type of 'This' cannot be qualified by '_Owned'}}
  int hoo(const _Owned This* this); // expected-error {{type of 'const This' cannot be qualified by '_Owned'}}
  int ioo(This* const _Owned this);
  int joo(const This* const this);
  int koo(_Owned This* _Owned this); // expected-error {{type of 'This' cannot be qualified by '_Owned'}}
  int loo(_Owned This* const this); // expected-error {{type of 'This' cannot be qualified by '_Owned'}}
  int moo(const This* _Owned this);
};

int int::foo(const int* this) {
  return 1;
}

int int::goo(_Owned int* this) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  return 1;
}

int int::hoo(const _Owned int* this) { // expected-error {{type of 'const int' cannot be qualified by '_Owned'}}
  return 1;
}

int int::ioo(int* const _Owned this) {
  int *p = __move_to_raw(this);
  return 1;
}

int int::joo(const int* const this) {
  return 1;
}

int int::koo(_Owned int* _Owned this) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  int *p = __move_to_raw(this); // expected-error {{incompatible _Owned types, cannot cast '_Owned int * _Nonnull' to 'int *'}}
  return 1;
}

int int::loo(_Owned int* const this) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  return 1;
}

int int::moo(const int* _Owned this) {
  int *p = __move_to_raw(this); // expected-warning {{initializing 'int *' with an expression of type 'const int * _Nonnull' discards qualifiers}}
  return 1;
}

_Impl _Trait F for int;

int main(){
  return 0;
}
